--- a/render.yaml
+++ b/render.yaml
@@ -3,12 +3,13 @@ services:
     name: intakeq-mcp-server
     runtime: python3
     buildCommand: pip install -r requirements.txt
-    startCommand: python server.py
+    startCommand: python web_server.py
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
       - key: PORT
-        value: 8000
+        generateValue: true
     scaling:
       minInstances: 1
       maxInstances: 3
+    healthCheckPath: /health
