--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: intakeq-mcp-server
     runtime: python3
     buildCommand: pip install -r requirements.txt
-    startCommand: python web_server.py
+    startCommand: python3 web_server.py
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
